--- a/dts/bindings/adc/atmosic,adc-controller.yaml
+++ b/dts/bindings/adc/atmosic,adc-controller.yaml
@@ -14,11 +14,43 @@ properties:
       type: int
       required: false
 
-    ch-batt:
+    ch-store:
       type: int
       required: false
 
-    ch-store:
+    ch-core:
+      type: int
+      required: false
+
+    ch-temp:
+      type: int
+      required: false
+
+    ch-p1diff:
+      type: int
+      required: false
+
+    ch-p0diff:
+      type: int
+      required: false
+
+    ch-p1single0:
+      type: int
+      required: false
+
+    ch-p1single1:
+      type: int
+      required: false
+
+    ch-p0single0:
+      type: int
+      required: false
+
+    ch-p0single1:
+      type: int
+      required: false
+
+    ch-batt:
       type: int
       required: false
 
