--- a/boards/atmosic/atm34evk/ATMEVK-3430e-WQN-2_ns.dts
+++ b/boards/atmosic/atm34evk/ATMEVK-3430e-WQN-2_ns.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021-2024 Atmosic
+ * Copyright (c) 2021-2025 Atmosic
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -126,6 +126,12 @@
 	tx-pin = <15>;
 	rts-pin = <13>;
 	cts-pin = <12>;
+};
+
+&i2s {
+	sck-out-pin = <18>;
+	ws-out-pin = <19>;
+	sd-out-pin = <20>;
 };
 
 arduino_i2c: &i2c0 {};
