--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -128,6 +128,7 @@ source "drivers/gpio/Kconfig.imx"
 source "drivers/gpio/Kconfig.intel"
 source "drivers/gpio/Kconfig.iproc"
 source "drivers/gpio/Kconfig.it8xxx2"
+source "drivers/gpio/Kconfig.kts162x"
 source "drivers/gpio/Kconfig.litex"
 source "drivers/gpio/Kconfig.lmp90xxx"
 source "drivers/gpio/Kconfig.lpc11u6x"
