--- a/drivers/i2s/CMakeLists.txt
+++ b/drivers/i2s/CMakeLists.txt
@@ -5,6 +5,7 @@ zephyr_syscall_header(${ZEPHYR_BASE}/include/zephyr/drivers/i2s.h)
 zephyr_library()
 
 zephyr_library_sources(i2s_common.c)
+zephyr_library_sources_ifdef(CONFIG_I2S_ATM		i2s_atm.c)
 zephyr_library_sources_ifdef(CONFIG_I2S_SAM_SSC		i2s_sam_ssc.c)
 zephyr_library_sources_ifdef(CONFIG_USERSPACE		i2s_handlers.c)
 zephyr_library_sources_ifdef(CONFIG_I2S_STM32		i2s_ll_stm32.c)
