--- a/dts/arm/atmosic/ATM34_peripherals.dtsi
+++ b/dts/arm/atmosic/ATM34_peripherals.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021-2024 Atmosic
+ * Copyright (c) 2021-2025 Atmosic
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -307,6 +307,16 @@ trng: trng@15b000 {
 
 wrpr2: wrpr2@163000 {
 	reg = <0x00163000 0x1000>;
+};
+
+i2s: i2s@165000 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	compatible = "atmosic,atm-i2s";
+	reg = <0x00165000 0x1000>;
+	interrupts = <60 2>;
+	clocks = <&sysclk>;
+	status = "disabled";
 };
 
 brownout: brownout {
