--- a/west.yml
+++ b/west.yml
@@ -290,7 +290,7 @@ manifest:
       path: modules/fs/littlefs
       groups:
         - fs
-      revision: 424a5e0d5ab273ab6833453288ccf64342c7a5cd
+      revision: pull/15/head
     - name: loramac-node
       revision: fb00b383072518c918e2258b0916c996f2d4eebe
       path: modules/lib/loramac-node
