kernel: Retire deprecated pipe API
The CONFIG_PIPES k_pipe API is retired.

Signed-off-by: Måns Ansgariusson <Mansgariusson@gmail.com>

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -74,6 +74,7 @@ list(APPEND kernel_files
   mailbox.c
   msg_q.c
   mutex.c
+  pipe.c
   queue.c
   sem.c
   stack.c
@@ -84,10 +85,6 @@ list(APPEND kernel_files
   thread.c
   sched.c
   )
-# FIXME: Once the prior pipe implementation is removed, this should be included in the above list
-if(NOT CONFIG_PIPES)
-list(APPEND kernel_files pipe.c)
-endif() # NOT CONFIG_PIPES
 if(CONFIG_SMP)
 list(APPEND kernel_files
      smp.c
@@ -150,7 +147,6 @@ target_sources_ifdef(CONFIG_ATOMIC_OPERATIONS_C   kernel PRIVATE atomic_c.c)
 target_sources_ifdef(CONFIG_MMU                   kernel PRIVATE mmu.c)
 target_sources_ifdef(CONFIG_POLL                  kernel PRIVATE poll.c)
 target_sources_ifdef(CONFIG_EVENTS                kernel PRIVATE events.c)
-target_sources_ifdef(CONFIG_PIPES                 kernel PRIVATE pipes.c)
 target_sources_ifdef(CONFIG_SCHED_THREAD_USAGE    kernel PRIVATE usage.c)
 target_sources_ifdef(CONFIG_OBJ_CORE              kernel PRIVATE obj_core.c)
 
