--- a/dts/bindings/bluetooth/nxp,bt-hci-uart.yaml
+++ b/dts/bindings/bluetooth/nxp,bt-hci-uart.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 NXP
+# Copyright 2024-2025 NXP
 # SPDX-License-Identifier: Apache-2.0
 
 description: |
@@ -11,11 +11,17 @@ include: base.yaml
 properties:
   sdio-reset-gpios:
     type: phandle-array
-    required: true
+    description: |
+      sd-card io to reset standalone BT CPU/WLAN CPU. If not defined
+      Coex (WIFI + BT use case) overlay uses the same IO
+      for CPU reset to avoid BT CPU reset post WLAN init.
 
   w-disable-gpios:
     type: phandle-array
-    required: true
+    description: |
+      wlan-power io to reset standalone BT CPU/WLAN CPU. If not defined
+      Coex (WIFI + BT use case) overlay uses the same IO
+      for CPU reset to avoid BT CPU reset post WLAN init.
 
   hci-operation-speed:
     type: int
