[nxp toup] drivers: added support to enable wifi+bt(coex) together
- Added CPU reset function in wifi driver to reset both wlan+bt cpu.
- Added coex overlay with required phandle to reset from wifi-driver.
- Removed phandles from m2_bt_module node for coex to avoid BT CPU
  reset during bt init flow.
- Added "BT_NXP_CTRL_BSP_TRIGGER" kconfig to enable boot-sleep-patch
  UART-RTS trigger using UART_LINE_CTRL command. PR#258 raised for
  LPUART changes to enable support of controlling UART RTS line.
- Updated bluetooth hci driver to provide trigger on BT CPU UART to
  wakeup and perform FW Download in Coex Scenario (WIFI+BT).

Signed-off-by: Nirav Agrawal <nirav.agrawal@nxp.com>

--- a/dts/bindings/bluetooth/nxp,bt-hci-uart.yaml
+++ b/dts/bindings/bluetooth/nxp,bt-hci-uart.yaml
@@ -11,11 +11,17 @@ include: base.yaml
 properties:
   sdio-reset-gpios:
     type: phandle-array
-    required: true
+    description: |
+      sd-card io to reset standalone BT CPU/WLAN CPU. If not defined
+      Coex (WIFI + BT use case) overlay uses the same IO
+      for CPU reset to avoid BT CPU reset post WLAN init.
 
   w-disable-gpios:
     type: phandle-array
-    required: true
+    description: |
+      wlan-power io to reset standalone BT CPU/WLAN CPU. If not defined
+      Coex (WIFI + BT use case) overlay uses the same IO
+      for CPU reset to avoid BT CPU reset post WLAN init.
 
   hci-operation-speed:
     type: int
