--- a/tests/bluetooth/shell/overlay-wifi-nxp-coex.conf
+++ b/tests/bluetooth/shell/overlay-wifi-nxp-coex.conf
@@ -1,3 +1,4 @@
+#Optimized to support IW416, IW612 with 1060EVKC
 
 #wifi
 CONFIG_EARLY_CONSOLE=y
@@ -42,7 +43,7 @@ CONFIG_NXP_MONOLITHIC_WIFI=y
 CONFIG_THREAD_CUSTOM_DATA=y
 CONFIG_EVENTS=y
 CONFIG_SYS_HEAP_AUTO=y
-CONFIG_HEAP_MEM_POOL_SIZE=122880
+#CONFIG_HEAP_MEM_POOL_SIZE=122880
 CONFIG_SCHED_MULTIQ=y
 CONFIG_ASSERT=y
 CONFIG_LOG_MODE_IMMEDIATE=y
@@ -58,11 +59,13 @@ CONFIG_NET_IPV6=y
 CONFIG_ETH_MCUX=n
 CONFIG_NET_ZPERF=y
 CONFIG_NET_ZPERF_MAX_PACKET_SIZE=1500
+CONFIG_ZPERF_WORK_Q_STACK_SIZE=4096
+#CONFIG_NET_ZPERF_LOG_LEVEL_INFO=y
 CONFIG_NET_BUF_LOG=y
-CONFIG_NET_PKT_RX_COUNT=160
+CONFIG_NET_PKT_RX_COUNT=40
 CONFIG_NET_PKT_TX_COUNT=40
-CONFIG_NET_BUF_RX_COUNT=160
-CONFIG_NET_BUF_TX_COUNT=80
+CONFIG_NET_BUF_RX_COUNT=100
+CONFIG_NET_BUF_TX_COUNT=100
 CONFIG_NET_BUF_DATA_SIZE=1744
 CONFIG_NET_TC_TX_COUNT=1
 CONFIG_NET_TC_RX_COUNT=1
@@ -105,7 +108,7 @@ CONFIG_PM_LOG_LEVEL_OFF=y
 
 # stack size
 CONFIG_SHELL_STACK_SIZE=6144
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=12288
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 CONFIG_NET_MGMT_EVENT_STACK_SIZE=4608
 CONFIG_NET_TCP_WORKQ_STACK_SIZE=2048
 #CONFIG_MAIN_STACK_SIZE=4096 @wifi
