drivers: sim7080: Own simcom modem driver directory
Placed sim7080 driver in separate directory and split it in multiple
source files for better readability.

Signed-off-by: Lukas Gehreke <lk.gehreke@gmail.com>

--- a/drivers/modem/Kconfig
+++ b/drivers/modem/Kconfig
@@ -194,6 +194,6 @@ source "drivers/modem/Kconfig.cellular"
 source "drivers/modem/Kconfig.at_shell"
 
 source "drivers/modem/Kconfig.hl7800"
-source "drivers/modem/Kconfig.simcom-sim7080"
+source "drivers/modem/simcom/Kconfig"
 
 endif # MODEM
