drivers: i3c: add i3c cb
Add a async api similiar to the i2c callback for i3c.

Signed-off-by: Ryan McClelland <ryanmcclelland@meta.com>

--- a/drivers/i3c/Kconfig
+++ b/drivers/i3c/Kconfig
@@ -159,6 +159,11 @@ endif # I3C_CONTROLLER && I3C_TARGET
 
 if I3C_CONTROLLER
 
+config I3C_CALLBACK
+	bool "I3C asynchronous callback API"
+	help
+	  API and implementations of i3c_transfer_cb and i3c_do_ccc_cb.
+
 config I3C_RTIO
 	bool "I3C RTIO API"
 	select EXPERIMENTAL
