[nxp noup] coex: ot: choose SPEED_OPTIMIZATIONS as default
For RW612 wifi+bt+ot coex app, console is not accessible during TCP /UDP
zperf uploading traffic.
The root cause is that SPEED_OPTIMIZATIONS and DEBUG_OPTIMIZATIONS are
selected at same time, and the second one will replace the first one, so
after compiling, CONFIG_DEBUG_OPTIMIZATIONS works and it will decrease
the performance and console has no chance to run during iperf traffic.
For more common user case, set SPEED_OPTIMIZATIONS as default for higher
performance.

Signed-off-by: Maochen Wang <maochen.wang@nxp.com>

--- a/samples/bluetooth/central_ht/overlay-ot-host-rcp-nxp.conf
+++ b/samples/bluetooth/central_ht/overlay-ot-host-rcp-nxp.conf
@@ -76,5 +76,6 @@ CONFIG_LOG_MODE_IMMEDIATE=y
 
 CONFIG_LOG=n
 
+# Compiler optimizations
 CONFIG_SPEED_OPTIMIZATIONS=y
-CONFIG_DEBUG_OPTIMIZATIONS=y
+#CONFIG_DEBUG_OPTIMIZATIONS=y
