--- a/tests/bluetooth/tester/overlay-ot-host-rcp-nxp.conf
+++ b/tests/bluetooth/tester/overlay-ot-host-rcp-nxp.conf
@@ -76,5 +76,6 @@ CONFIG_LOG_MODE_IMMEDIATE=y
 
 CONFIG_LOG=n
 
+# Compiler optimizations
 CONFIG_SPEED_OPTIMIZATIONS=y
-CONFIG_DEBUG_OPTIMIZATIONS=y
+#CONFIG_DEBUG_OPTIMIZATIONS=y
