--- a/tests/bluetooth/tester/overlay-wifi-nxp.conf
+++ b/tests/bluetooth/tester/overlay-wifi-nxp.conf
@@ -33,8 +33,11 @@ CONFIG_ZVFS_OPEN_MAX=30
 
 # shell
 CONFIG_SHELL_ARGC_MAX=48
+
+# wifi
+CONFIG_NXP_WIFI_SOFTAP_SUPPORT=y
 CONFIG_WIFI_SHELL_MAX_AP_STA=8
-CONFIG_WIFI_MGMT_AP_MAX_NUM_STA=8
+CONFIG_NXP_WIFI_TX_RX_ZERO_COPY=y
 
 # net
 CONFIG_NETWORKING=y
