--- a/dts/bindings/wifi/nxp,wifi.yaml
+++ b/dts/bindings/wifi/nxp,wifi.yaml
@@ -10,6 +10,9 @@ compatible: "nxp,wifi"
 include: [base.yaml, pinctrl-device.yaml]
 
 properties:
+  interrupts:
+    required: true
+
   wakeup-gpios:
     type: phandle-array
     description: |
