--- a/tests/bluetooth/shell/overlay-wifi-nxp.conf
+++ b/tests/bluetooth/shell/overlay-wifi-nxp.conf
@@ -59,6 +59,7 @@ CONFIG_NET_IPV6_FRAGMENT=y
 CONFIG_ETH_DRIVER=n
 
 CONFIG_NET_ZPERF=y
+CONFIG_NET_ZPERF_SERVER=y
 CONFIG_NET_ZPERF_MAX_PACKET_SIZE=1500
 CONFIG_NET_BUF_LOG=y
 CONFIG_NET_PKT_RX_COUNT=36
