--- a/tests/bluetooth/shell/overlay-wifi-nxp-coex.conf
+++ b/tests/bluetooth/shell/overlay-wifi-nxp-coex.conf
@@ -45,6 +45,7 @@ CONFIG_EVENTS=y
 CONFIG_SYS_HEAP_AUTO=y
 #CONFIG_HEAP_MEM_POOL_SIZE=122880
 CONFIG_SCHED_MULTIQ=y
+CONFIG_ZVFS_OPEN_MAX=30
 CONFIG_ASSERT=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 
