--- a/subsys/bluetooth/host/Kconfig
+++ b/subsys/bluetooth/host/Kconfig
@@ -75,7 +75,6 @@ config BT_HCI_TX_PRIO
 
 choice BT_RECV_CONTEXT
 	prompt "BT RX Thread Selection"
-	default BT_RECV_WORKQ_SYS if SOC_SERIES_NRF51X
 	default BT_RECV_WORKQ_BT
 	help
 	  Selects in which context incoming low priority HCI packets are processed.
@@ -85,7 +84,8 @@ choice BT_RECV_CONTEXT
 	  packets are processed.
 
 config BT_RECV_WORKQ_SYS
-	bool "Process low priority HCI packets in the system work queue"
+	bool "Process low priority HCI packets in the system work queue [DEPRECATED]"
+	select DEPRECATED
 	help
 	  When this option is selected, the host will process incoming low priority HCI packets
 	  in the system work queue.
@@ -126,6 +126,20 @@ config BT_RX_PRIO
 	# Hidden option for Co-Operative Rx thread priority
 	int
 	default 8
+
+config BT_WQ
+	bool
+	default y if BT_RECV_WORKQ_BT
+
+if BT_WQ
+config BT_WQ_STACK_SIZE
+	int
+	default BT_RX_STACK_SIZE
+
+config BT_WQ_PRIO
+	int
+	default BT_RX_PRIO
+endif
 
 config BT_DRIVER_RX_HIGH_PRIO
 	# Hidden option for Co-Operative HCI driver RX thread priority
