--- a/samples/bluetooth/central_hr/prj_minimal.conf
+++ b/samples/bluetooth/central_hr/prj_minimal.conf
@@ -47,29 +47,29 @@ CONFIG_ARM_MPU=n
 # CONFIG_THREAD_ANALYZER_RUN_UNLOCKED=y
 # CONFIG_THREAD_ANALYZER_USE_PRINTK=y
 # CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=20
-# CONFIG_CONSOLE=y
-# CONFIG_UART_CONSOLE=y
-# CONFIG_SERIAL=y
-# CONFIG_PRINTK=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_SERIAL=y
+CONFIG_PRINTK=y
 
 # Example output of thread analyzer
-# BT RX               : STACK: unused 576 usage 448 / 1024 (43 %); CPU: 0 %
-# BT RX pri           : STACK: unused 260 usage 188 / 448 (41 %); CPU: 0 %
-# BT ECC              : STACK: unused 256 usage 888 / 1144 (77 %); CPU: 1 %
-# BT TX               : STACK: unused 296 usage 344 / 640 (53 %); CPU: 0 %
-# thread_analyzer     : STACK: unused 128 usage 384 / 512 (75 %); CPU: 1 %
-# sysworkq            : STACK: unused 856 usage 168 / 1024 (16 %); CPU: 0 %
-# logging             : STACK: unused 232 usage 536 / 768 (69 %); CPU: 0 %
-# idle 00             : STACK: unused 208 usage 48 / 256 (18 %); CPU: 97 %
-# main                : STACK: unused 576 usage 448 / 1024 (43 %); CPU: 0 %
+# BT CTLR RX          : STACK: unused 16 usage 288 / 304 (94 %); CPU: 0 %
+# BT CTLR RX pri      : STACK: unused 24 usage 344 / 368 (93 %); CPU: 0 %
+# BT WQ               : STACK: unused 48 usage 976 / 1024 (95 %); CPU: 1 %
+# thread_analyzer     : STACK: unused 464 usage 560 / 1024 (54 %); CPU: 0 %
+# BT LW WQ            : STACK: unused 24 usage 1080 / 1104 (97 %); CPU: 19 %
+# sysworkq            : STACK: unused 96 usage 504 / 600 (84 %); CPU: 0 %
+# idle                : STACK: unused 40 usage 88 / 128 (68 %); CPU: 78 %
+# main                : STACK: unused 168 usage 432 / 600 (72 %); CPU: 0 %
+# ISR0                : STACK: unused 200 usage 600 / 800 (75 %)
 CONFIG_BT_RX_STACK_SIZE=1024
 CONFIG_BT_HCI_TX_STACK_SIZE_WITH_PROMPT=y
 CONFIG_BT_HCI_TX_STACK_SIZE=640
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1100
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=600
 CONFIG_BT_LONG_WQ_STACK_SIZE=1100
 CONFIG_IDLE_STACK_SIZE=128
-CONFIG_MAIN_STACK_SIZE=640
-CONFIG_ISR_STACK_SIZE=1024
+CONFIG_MAIN_STACK_SIZE=600
+CONFIG_ISR_STACK_SIZE=700
 
 # Disable features not needed
 CONFIG_TIMESLICING=n
