--- a/samples/bluetooth/peripheral_hr/prj_minimal.conf
+++ b/samples/bluetooth/peripheral_hr/prj_minimal.conf
@@ -54,29 +54,28 @@ CONFIG_BUILTIN_STACK_GUARD=n
 # CONFIG_THREAD_ANALYZER_RUN_UNLOCKED=y
 # CONFIG_THREAD_ANALYZER_USE_PRINTK=y
 # CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=20
-# CONFIG_CONSOLE=y
-# CONFIG_UART_CONSOLE=y
-# CONFIG_SERIAL=y
-# CONFIG_PRINTK=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_SERIAL=y
+CONFIG_PRINTK=y
 
 # Example output of thread analyzer
-# BT RX               : STACK: unused 576 usage 448 / 1024 (43 %); CPU: 0 %
-# BT RX pri           : STACK: unused 260 usage 188 / 448 (41 %); CPU: 0 %
-# BT ECC              : STACK: unused 256 usage 888 / 1144 (77 %); CPU: 1 %
-# BT TX               : STACK: unused 296 usage 344 / 640 (53 %); CPU: 0 %
-# thread_analyzer     : STACK: unused 128 usage 384 / 512 (75 %); CPU: 1 %
-# sysworkq            : STACK: unused 856 usage 168 / 1024 (16 %); CPU: 0 %
-# logging             : STACK: unused 232 usage 536 / 768 (69 %); CPU: 0 %
-# idle 00             : STACK: unused 208 usage 48 / 256 (18 %); CPU: 97 %
-# main                : STACK: unused 576 usage 448 / 1024 (43 %); CPU: 0 %
-CONFIG_BT_RX_STACK_SIZE=1024
+# BT CTLR RX          : STACK: unused 32 usage 288 / 320 (90 %); CPU: 0 %
+# BT CTLR RX pri      : STACK: unused 32 usage 344 / 376 (91 %); CPU: 0 %
+# BT WQ               : STACK: unused 32 usage 944 / 976 (96 %); CPU: 0 %
+# BT LW WQ            : STACK: unused 8 usage 1096 / 1104 (99 %); CPU: 8 %
+# sysworkq            : STACK: unused 40 usage 360 / 400 (90 %); CPU: 0 %
+# idle                : STACK: unused 40 usage 88 / 128 (68 %); CPU: 90 %
+# main                : STACK: unused 72 usage 608 / 680 (89 %); CPU: 0 %
+# ISR0                : STACK: unused 104 usage 600 / 704 (85 %)
+CONFIG_BT_RX_STACK_SIZE=976
 CONFIG_BT_HCI_TX_STACK_SIZE_WITH_PROMPT=y
 CONFIG_BT_HCI_TX_STACK_SIZE=640
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1100
-CONFIG_BT_LONG_WQ_STACK_SIZE=1100
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=400
 CONFIG_IDLE_STACK_SIZE=128
-CONFIG_MAIN_STACK_SIZE=640
-CONFIG_ISR_STACK_SIZE=1024
+CONFIG_MAIN_STACK_SIZE=680
+CONFIG_ISR_STACK_SIZE=700
+CONFIG_BT_LONG_WQ_STACK_SIZE=1120
 
 # Disable features not needed
 CONFIG_TIMESLICING=n
