[nxp toup] samples: net: wifi: shell: nxp: added hostap conf
Added hostap configurations needed for hosted mcus.

Signed-off-by: Abhinav Kulkarni <abhinav.kulkarni@nxp.com>

--- a/samples/net/wifi/shell/nxp/overlay_hostap_hosted_mcu.conf
+++ b/samples/net/wifi/shell/nxp/overlay_hostap_hosted_mcu.conf
@@ -32,6 +32,7 @@ CONFIG_EAP_TLSV1_3=y
 # mbedtls heap for enterprise case
 CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=90432
+CONFIG_MBEDTLS_HAVE_TIME_DATE=y
 
 #priority
 CONFIG_WIFI_NM_WPA_SUPPLICANT_WQ_PRIO=3
