--- a/drivers/modem/simcom/sim7080/CMakeLists.txt
+++ b/drivers/modem/simcom/sim7080/CMakeLists.txt
@@ -13,4 +13,5 @@ zephyr_library_sources(
     sim7080_sock.c
     sim7080_sms.c
     sim7080_ftp.c
-    sim7080_gps.c)
+    sim7080_gps.c
+    sim7080_meas.c)
