--- a/tests/bluetooth/shell/overlay-wifi-nxp-coex.conf
+++ b/tests/bluetooth/shell/overlay-wifi-nxp-coex.conf
@@ -44,8 +44,14 @@ CONFIG_ZVFS_OPEN_MAX=30
 CONFIG_ASSERT=y
 CONFIG_LOG_MODE_IMMEDIATE=y
 
-# shell @coex
+# shell
 CONFIG_SHELL_CMD_BUFF_SIZE=512
+CONFIG_SHELL_ARGC_MAX=48
+CONFIG_WIFI_SHELL_MAX_AP_STA=8
+CONFIG_WIFI_MGMT_AP_MAX_NUM_STA=8
+
+# AP
+CONFIG_NXP_WIFI_SOFTAP_SUPPORT=y
 
 # net
 CONFIG_NET_L2_ETHERNET=y
