drivers: modem: sim7080: added function to query local time
Added funtion to query local time and added injection time to
gnss xtra validity query function.

Signed-off-by: Lukas Gehreke <lk.gehreke@gmail.com>

--- a/drivers/modem/simcom/sim7080/CMakeLists.txt
+++ b/drivers/modem/simcom/sim7080/CMakeLists.txt
@@ -14,4 +14,5 @@ zephyr_library_sources(
     sim7080_sms.c
     sim7080_ftp.c
     sim7080_gps.c
-    sim7080_meas.c)
+    sim7080_meas.c
+    sim7080_utils.c)
