drivers: display: Introduce ST7565R
Introduce support for Sitronix's ST7565R display controller.
Tested on JHD12864 LCD display.

Signed-off-by: Giyora Haroon <dev@giyorah.com>

--- a/drivers/display/CMakeLists.txt
+++ b/drivers/display/CMakeLists.txt
@@ -27,6 +27,7 @@ zephyr_library_sources_ifdef(CONFIG_SSD1331		display_ssd1331.c)
 zephyr_library_sources_ifdef(CONFIG_SSD135X		display_ssd135x.c)
 zephyr_library_sources_ifdef(CONFIG_ST730X		display_st730x.c)
 zephyr_library_sources_ifdef(CONFIG_ST75256		display_st75256.c)
+zephyr_library_sources_ifdef(CONFIG_ST7565R		display_st7565r.c)
 zephyr_library_sources_ifdef(CONFIG_ST7567		display_st7567.c)
 zephyr_library_sources_ifdef(CONFIG_ST7789V		display_st7789v.c)
 zephyr_library_sources_ifdef(CONFIG_ST7735R		display_st7735r.c)
