--- a/drivers/display/Kconfig
+++ b/drivers/display/Kconfig
@@ -37,6 +37,7 @@ source "drivers/display/Kconfig.ssd135x"
 source "drivers/display/Kconfig.ssd1363"
 source "drivers/display/Kconfig.st730x"
 source "drivers/display/Kconfig.st75256"
+source "drivers/display/Kconfig.st7565r"
 source "drivers/display/Kconfig.st7567"
 source "drivers/display/Kconfig.st7735r"
 source "drivers/display/Kconfig.st7789v"
