[nxp toup] boards: frdm_rw612: Flash partitions update
Flash partitions are updated as per partitions
available in tfm for frdm_rw612 board.
BL2 is now by default supported in tfm on this board.

Signed-off-by: Waqar Tahir <waqar.tahir@nxp.com>

--- a/boards/nxp/frdm_rw612/frdm_rw612_rw612_ns_defconfig
+++ b/boards/nxp/frdm_rw612/frdm_rw612_rw612_ns_defconfig
@@ -14,5 +14,5 @@ CONFIG_ARM_MPU=y
 CONFIG_HW_STACK_PROTECTION=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
 
-CONFIG_TFM_BL2=n
+CONFIG_TFM_BL2=y
 CONFIG_BUILD_WITH_TFM=y
