--- a/boards/nxp/frdm_rw612/frdm_rw612_common.dtsi
+++ b/boards/nxp/frdm_rw612/frdm_rw612_common.dtsi
@@ -168,22 +168,33 @@ mikrobus_serial: &flexcomm0 {};
 			 */
 			boot_partition: partition@0 {
 				label = "mcuboot";
-				reg = <0x00000000 DT_SIZE_K(128)>;
+				reg = <0x00000000 DT_SIZE_K(128)>; // 128 KB
 			};
 
 			slot0_partition: partition@20000 {
 				label = "image-0";
-				reg = <0x00020000 DT_SIZE_M(3)>;
+				reg = <0x00020000 0x000A0000>;  // 640 KB
 			};
 
-			slot1_partition: partition@320000 {
+			slot0_ns_partition: partition@C0000 {
+				label = "image-0-non-secure";
+				reg = <0x000C0000 0x00300000>;  // 3 MB
+			};
+
+			slot1_partition: partition@3C0000 {
 				label = "image-1";
-				reg = <0x00320000 DT_SIZE_M(3)>;
+				reg = <0x003C0000 0x000A0000>;  // 640 KB
 			};
 
-			storage_partition: partition@620000 {
+			slot1_ns_partition: partition@460000 {
+				label = "image-1-non-secure";
+				reg = <0x00460000 0x00300000>;  // 3 MB
+			};
+
+			storage_partition: partition@760000 {
 				label = "storage";
-				reg = <0x00620000 (DT_SIZE_M(58) - DT_SIZE_K(128))>;
+				/* above partition sizes are: 128 KB + 640 KB + 3 MB + 640 KB + 3 MB => 7 MB + 384 KB */
+				reg = <0x00760000 (DT_SIZE_M(57) - DT_SIZE_K(384))>; 
 			};
 		};
 	};
