--- a/boards/nxp/rd_rw612_bga/rd_rw612_bga_rw612_ns_defconfig
+++ b/boards/nxp/rd_rw612_bga/rd_rw612_bga_rw612_ns_defconfig
@@ -14,5 +14,5 @@ CONFIG_ARM_MPU=y
 CONFIG_HW_STACK_PROTECTION=y
 CONFIG_TRUSTED_EXECUTION_NONSECURE=y
 
-CONFIG_TFM_BL2=n
+CONFIG_TFM_BL2=y
 CONFIG_BUILD_WITH_TFM=y
