--- a/samples/net/wifi/shell/nxp/overlay_hostap_hosted_mcu.conf
+++ b/samples/net/wifi/shell/nxp/overlay_hostap_hosted_mcu.conf
@@ -32,7 +32,11 @@ CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=90432
 CONFIG_MBEDTLS_HAVE_TIME_DATE=y
 
-#priority
+# psa crypto hw acceleration
+CONFIG_PSA_CRYPTO_DRIVER_DCP=y
+CONFIG_PSA_CRYPTO_DRIVER_THREAD_EN=y
+
+# priority
 CONFIG_WIFI_NM_WPA_SUPPLICANT_WQ_PRIO=3
 CONFIG_WIFI_NM_WPA_SUPPLICANT_PRIO=3
 
