--- a/dts/bindings/stepper/adi/adi,tmc51xx-base.yaml
+++ b/dts/bindings/stepper/adi/adi,tmc51xx-base.yaml
@@ -4,37 +4,6 @@
 description: |
   Common properties for Analog Devices TMC51XX Stepper Motor Controller
 
-include:
-  - name: adi,trinamic-gconf.yaml
-    property-allowlist:
-      - en-pwm-mode
-      - test-mode
-  - name: stepper-controller.yaml
-  - name: adi,trinamic-ramp-generator.yaml
-    property-allowlist:
-      - vstart
-      - a1
-      - v1
-      - amax
-      - vmax
-      - dmax
-      - d1
-      - vstop
-      - tzerowait
-      - thigh
-      - tcoolthrs
-      - tpwmthrs
-      - tpowerdown
-      - ihold
-      - irun
-      - iholddelay
-  - name: adi,trinamic-stallguard.yaml
-    property-allowlist:
-      - activate-stallguard2
-      - stallguard2-threshold
-      - stallguard-threshold-velocity
-      - stallguard-velocity-check-interval-ms
-
 properties:
   "#address-cells":
     default: 1
@@ -53,3 +22,40 @@ properties:
 
       Hint: µstep velocity v[Hz] µsteps / s v[Hz] = v[51xx] * ( fCLK[Hz]/2 / 2^23 )
             where v[51xx] is the value written to the TMC51XX.
+
+include:
+  - name: adi,trinamic-gconf.yaml
+    property-allowlist:
+      - en-pwm-mode
+      - test-mode
+
+child-binding:
+  include:
+    - name: stepper-controller.yaml
+    - name: base.yaml
+      property-allowlist:
+        - reg
+    - name: adi,trinamic-ramp-generator.yaml
+      property-allowlist:
+        - vstart
+        - a1
+        - v1
+        - amax
+        - vmax
+        - dmax
+        - d1
+        - vstop
+        - tzerowait
+        - thigh
+        - tcoolthrs
+        - tpwmthrs
+        - tpowerdown
+        - ihold
+        - irun
+        - iholddelay
+    - name: adi,trinamic-stallguard.yaml
+      property-allowlist:
+        - activate-stallguard2
+        - stallguard2-threshold
+        - stallguard-threshold-velocity
+        - stallguard-velocity-check-interval-ms
