--- a/drivers/stepper/adi_tmc/CMakeLists.txt
+++ b/drivers/stepper/adi_tmc/CMakeLists.txt
@@ -5,7 +5,9 @@ zephyr_library()
 zephyr_library_property(ALLOW_EMPTY TRUE)
 
 zephyr_library_sources_ifdef(CONFIG_STEPPER_ADI_TMC2209 tmc22xx.c)
-zephyr_library_sources_ifdef(CONFIG_STEPPER_ADI_TMC50XX tmc50xx.c)
-add_subdirectory_ifdef(CONFIG_STEPPER_ADI_TMC51XX tmc51xx)
+
+if(CONFIG_STEPPER_ADI_TMC51XX OR CONFIG_STEPPER_ADI_TMC50XX)
+    add_subdirectory(tmc5xxx)
+endif()
 
 add_subdirectory_ifdef(CONFIG_STEPPER_ADI_TMC bus)
