--- a/tests/drivers/build_all/stepper/spi.dtsi
+++ b/tests/drivers/build_all/stepper/spi.dtsi
@@ -97,32 +97,35 @@ adi_tmc51xx_1: adi_tmc51xx@1 {
 	test-mode; /* ADI TMC Global configuration flags */
 	clock-frequency = <16000000>; /* Internal/External Clock frequency */
 
-	/* common stepper controller settings */
-	invert-direction;
-	micro-step-res = <256>;
+	tmc51xx_1_motor: motor@0 {
+		status = "okay";
+		reg = <0>;
+		invert-direction;
+		micro-step-res = <256>;
 
-	/* ADI TMC stallguard settings specific to TMC5160 */
-	activate-stallguard2;
-	stallguard-velocity-check-interval-ms = <100>;
-	stallguard2-threshold = <9>;
-	stallguard-threshold-velocity = <50000>;
+		/* ADI TMC stallguard settings specific to TMC5160 */
+		activate-stallguard2;
+		stallguard-velocity-check-interval-ms = <100>;
+		stallguard2-threshold = <9>;
+		stallguard-threshold-velocity = <50000>;
 
-	/* ADI TMC ramp generator as well as current settings */
-	vstart = <10>;
-	a1 = <20>;
-	v1 = <30>;
-	d1 = <40>;
-	vmax = <50>;
-	amax = <60>;
-	dmax = <70>;
-	tzerowait = <80>;
-	thigh = <90>;
-	tcoolthrs = <100>;
-	tpwmthrs = <110>;
-	tpowerdown = <120>;
-	ihold = <1>;
-	irun = <2>;
-	iholddelay = <3>;
+		/* ADI TMC ramp generator as well as current settings */
+		vstart = <10>;
+		a1 = <20>;
+		v1 = <30>;
+		d1 = <40>;
+		vmax = <50>;
+		amax = <60>;
+		dmax = <70>;
+		tzerowait = <80>;
+		thigh = <90>;
+		tcoolthrs = <100>;
+		tpwmthrs = <110>;
+		tpowerdown = <120>;
+		ihold = <1>;
+		irun = <2>;
+		iholddelay = <3>;
+	};
 };
 
 adi_tmc51xx_2: adi_tmc51xx@2 {
@@ -140,30 +143,34 @@ adi_tmc51xx_2: adi_tmc51xx@2 {
 	test-mode; /* ADI TMC Global configuration flags */
 	clock-frequency = <16000000>; /* Internal/External Clock frequency */
 
-	/* common stepper controller settings */
-	invert-direction;
-	micro-step-res = <256>;
+	tmc51xx_2_motor: motor@0 {
+		status = "okay";
+		reg = <0>;
+		/* common stepper controller settings */
+		invert-direction;
+		micro-step-res = <256>;
 
-	/* ADI TMC stallguard settings specific to TMC5160 */
-	activate-stallguard2;
-	stallguard-velocity-check-interval-ms = <100>;
-	stallguard2-threshold = <9>;
-	stallguard-threshold-velocity = <50000>;
+		/* ADI TMC stallguard settings specific to TMC5160 */
+		activate-stallguard2;
+		stallguard-velocity-check-interval-ms = <100>;
+		stallguard2-threshold = <9>;
+		stallguard-threshold-velocity = <50000>;
 
-	/* ADI TMC ramp generator as well as current settings */
-	vstart = <10>;
-	a1 = <20>;
-	v1 = <30>;
-	d1 = <40>;
-	vmax = <50>;
-	amax = <60>;
-	dmax = <70>;
-	tzerowait = <80>;
-	thigh = <90>;
-	tcoolthrs = <100>;
-	tpwmthrs = <110>;
-	tpowerdown = <120>;
-	ihold = <1>;
-	irun = <2>;
-	iholddelay = <3>;
+		/* ADI TMC ramp generator as well as current settings */
+		vstart = <10>;
+		a1 = <20>;
+		v1 = <30>;
+		d1 = <40>;
+		vmax = <50>;
+		amax = <60>;
+		dmax = <70>;
+		tzerowait = <80>;
+		thigh = <90>;
+		tcoolthrs = <100>;
+		tpwmthrs = <110>;
+		tpowerdown = <120>;
+		ihold = <1>;
+		irun = <2>;
+		iholddelay = <3>;
+	};
 };
