[nxp fromlist] IW610 WLAN wakeup support on Zephyr
The WLAN wakeup support of IW610 is for EVKC1060. Added wakeup gpio pin
in overlay file for IW610. Completed corresponding gpio configuration when
doing device initialization.

Signed-off-by: Hui Bai <hui.bai@nxp.com>

--- a/dts/bindings/wifi/nxp,wifi.yaml
+++ b/dts/bindings/wifi/nxp,wifi.yaml
@@ -33,3 +33,11 @@ properties:
       This pin defaults to active high when consumed by the SD card. The
       property value should ensure the flags properly describe the signal
       that is presented to the driver.
+
+  wakeup-gpios:
+    type: phandle-array
+    description: |
+      WLAN wakeup host pin
+      This pin defaults to active low when consumed by the SDK card. The
+      property value should ensure the flags properly describ the signal
+      that is presendted to the driver.
