samples: video: tcpserversink: video compression support
Add video compression support to lowerize network bandwidth.

To visualise camera content on host PC, use GStreamer command line:
$> gst-launch-1.0 tcpclientsrc host=<board ip address> port=5000 ! decodebin ! autovideosink sync=false

Signed-off-by: Hugues Fruchet <hugues.fruchet@foss.st.com>

--- a/samples/drivers/video/tcpserversink/Kconfig
+++ b/samples/drivers/video/tcpserversink/Kconfig
@@ -68,6 +68,11 @@ config VIDEO_CTRL_VFLIP
 	help
 	  If set, mirror the video frame vertically
 
+config VIDEO_ENCODED_PIXEL_FORMAT
+	string "Pixel format of the encoded frame"
+	help
+	  Pixel format of the encoded frame.
+
 endmenu
 
 source "Kconfig.zephyr"
